--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -1,2 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Dziękujemy za wypełnienie ankiety!</h1>
 <h2>Przeanalizowane dane wraz z wnioskami zostaną udostępnione na stronie w dniu 19.05.2022 r.</h2>
+{% endblock content %}
