--- a/templates/forms.html
+++ b/templates/forms.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+    <body style="padding-left:  350px; padding-right: 350px; background-clip: padding-box">
 {% crispy form form.helper %}
+    </body>
 {% endblock %}
