--- a/templates/forms.html
+++ b/templates/forms.html
@@ -2,6 +2,6 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <body style="padding-left:  350px; padding-right: 350px;">
-{% crispy form form.helper %}`
+{% crispy form form.helper %}
     </body>
 {% endblock %}
