--- a/templates/main.html
+++ b/templates/main.html
@@ -86,6 +86,7 @@
         }
     </style>
     <title>Teleporada | Ankieta</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 </head>
 <div class="bg">
     <div class="content">
