added css to forms

--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
         body, html {
             height: 100%;
             margin: 0;
@@ -18,6 +19,7 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
 
         * {
             box-sizing: border-box;
@@ -53,6 +55,7 @@
         }
 
         .button {
+            overflow:hidden;
             position: absolute;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -68,7 +71,7 @@
             height: 40px;
             line-height: 20px;
             list-style: none;
-            margin: 0;
+            margin:20px;
             outline: none;
             padding: 10px 16px;
             text-align: center;
