--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teleporada | Ankieta</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+
+        .bg {
+            background-image: url('{% static 'img/backgroundForm.png'%}');
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        .custom-control-input {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+
+            border-radius: 50%;
+            width: 16px;
+            height: 16px;
+
+            border: 2px solid #999;
+            transition: 0.05s all linear;
+            margin-right: 5px;
+
+            position: relative;
+            top: 4px;
+        }
+
+        input:checked {
+            border: 6px solid #536bd3;
+        }
+
+        .textInput {
+            border-radius: 20px;
+            border-color: #125eba;
+            padding: 5px 5px;
+        }
+
+        .bg .content {
+            position: center;
+            background: white;
+            width: 60%;
+            color: #4d5258;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-top: 2%;
+            font-family: 'Open Sans', sans-serif;
+            line-height: 2;
+            font-size: 16px;
+            text-align: justify;
+        }
+
+        .button {
+            position: relative;
+            background-color: #283e9b;
+            left: 40%;
+            transform: translate(-50%, -50%);
+            border-radius: 20px;
+            border-style: none;
+            box-sizing: border-box;
+            color: #FFFFFF;
+            cursor: pointer;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 16px;
+            height: 40px;
+            width: 100px;
+            line-height: 20px;
+            list-style: none;
+            margin: 20px 10px 10px;
+            outline: none;
+            padding: 10px 16px;
+            text-align: center;
+            text-decoration: none;
+            transition: color 100ms;
+            vertical-align: baseline;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .button:hover,
+        .button:focus {
+            background-color: #324EC4;
+        }
+
+        .buttonBack {
+            position: relative;
+            left: 40%;
+            transform: translate(-50%, -50%);
+            border-radius: 20px;
+            border-style: none;
+            background-color: #536bd3;
+            box-sizing: border-box;
+            color: white;
+            cursor: pointer;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 16px;
+            height: 40px;
+            width: 100px;
+            line-height: 20px;
+            list-style: none;
+            margin: 20px 10px 10px;
+            outline: none;
+            padding: 10px 16px;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: baseline;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .buttonBack:hover,
+        .buttonBack:focus {
+            background-color: #324EC4;
+            color: white;
+        }
+
+        .btn {
+            position: center;
+        }
+
+        .invalid-feedback {
+            font-size: smaller;
+            color: #de212c;
+            display: block;
+        }
+
+        .is-invalid {
+            border-color: #cb0c17
+        }
+
+
+        .text-muted {
+            font-size: smaller;
+            display: block;
+        }
+
+    </style>
+    {#  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">#}
 </head>
-<body>
-    <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
+
+<body class="bg">
+<div class="content">
+    {% block content %}
+    {% endblock %}
 </div>
 </body>
 </html>
