--- a/templates/forms.html
+++ b/templates/forms.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+{#    <form method="post">#}
+{#    {% csrf_token %}#}
 {% crispy form form.helper %}
+{#    {{ form.as_p }}#}
+{#    <input type="submit" name="submit">#}
+{#    </form>#}
 {% endblock %}
