--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,7 @@
         .bg {
             background-image: url('{% static 'img/background.jpg'%}');
             height: 100%;
+            margin: 0;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
