--- a/templates/main.html
+++ b/templates/main.html
@@ -38,12 +38,16 @@
         .text {
             color: #4d5258;
             padding-left: 9%;
-            padding-top: 15%;
             padding-right: 9%;
             font-family: 'Open Sans', sans-serif;
             line-height: 1.6;
             font-size: 16px;
             text-align: justify;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
         }
 
         h1 {
