--- a/templates/main.html
+++ b/templates/main.html
@@ -60,7 +60,7 @@
         }
 
         .button {
-            overflow:hidden;
+            overflow: hidden;
             position: absolute;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -76,7 +76,7 @@
             height: 40px;
             line-height: 20px;
             list-style: none;
-            margin:20px;
+            margin: 20px;
             outline: none;
             padding: 10px 16px;
             text-align: center;
@@ -92,6 +92,45 @@
         .button:focus {
             background-color: #324EC4;
         }
+
+        .footer {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            padding-right: 2%;
+            width: 100%;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 12px;
+            color: #324EC4;
+            text-align: right;
+        }
+
+        @media only screen
+        and (max-device-width: 480px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+            .content {
+                width: 100%;
+            }
+
+            .text {
+                font-size: 40px;
+            }
+
+            h1 {
+                font-size: 70px;
+            }
+
+            .button {
+                font-size: 40px;
+                padding: 40px;
+                border-radius: 40px;
+            }
+
+            .footer {
+                font-size: 25px;
+            }
+        }
     </style>
     <title>Teleporada | Ankieta</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
@@ -99,7 +138,7 @@
 <div class="bg">
     <div class="content">
         <div class="text">
-            <h1>Wpływ teleporady na jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów oraz lekarzy</h1>
+            <h1>Wpływ teleporady na&nbsp;jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów oraz&nbsp;lekarzy</h1>
             <p>Jesteśmy studentami Politechniki Gdańskiej na kierunku Inżynieria Biomedyczna. W ramach przedmiotów
                 Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz Hurtownie i Eksploracja Danych stworzono poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
@@ -110,6 +149,9 @@
                 <input type="submit" class="button" value="Przejdź do ankiety"/>
             </form>
         </div>
+    </div>
+    <div class="footer">
+        <p>Anna Bączyk & Bartosz Czapla</p>
     </div>
 </div>
 </html>
