--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -51,6 +51,38 @@
             line-height: normal;
             color: #283e9b;
         }
+
+        .footer {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            padding-left: 2%;
+            width: 100%;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 12px;
+            color: #324EC4;
+            text-align: left;
+        }
+
+        @media only screen
+        and (max-device-width: 480px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+            .content {
+                width: 100%;
+            }
+
+            .text {
+                font-size: 40px;
+            }
+
+            h1 {
+                font-size: 70px;
+            }
+            .footer {
+                font-size: 25px;
+            }
+        }
     </style>
     <title>Teleporada | Ankieta</title>
 </head>
@@ -59,6 +91,10 @@
         <div class="text">
 <h1>Dziękujemy za wypełnienie ankiety!</h1>
 <h2>Przeanalizowane dane wraz z wnioskami zostaną udostępnione na stronie w dniu 19.05.2022 r.</h2>
-</div></div>
+</div>
+    </div>
+    <div class="footer">
+        <p>Anna Bączyk & Bartosz Czapla</p>
+    </div>
 </div>
 </html>
