--- a/templates/main.html
+++ b/templates/main.html
@@ -140,10 +140,13 @@
         <div class="text">
             <h1>Wpływ teleporady na&nbsp;jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów oraz&nbsp;lekarzy</h1>
             <p>Jesteśmy studentami Politechniki Gdańskiej na kierunku Inżynieria Biomedyczna. W&nbsp;ramach przedmiotów
-                Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz Hurtownie i&nbsp;Eksploracja Danych stworzono poniższą
+                Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz&nbsp;Hurtownie i&nbsp;Eksploracja Danych stworzono poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
-                anonimowa. Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na stronie w dniu 19.05.2022
+                anonimowa. Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na&nbsp;stronie w dniu 19.05.2022
                 r.</p>
+            <p>
+                Wypełnienie ankiety zajmie około 5 minut.
+            </p>
             <br/>
             <form action="/general">
                 <input type="submit" class="button" value="Przejdź do ankiety"/>
