--- a/templates/main.html
+++ b/templates/main.html
@@ -143,7 +143,8 @@
                 Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz&nbsp;Hurtownie i&nbsp;Eksploracja Danych stworzono poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
                 anonimowa. Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na&nbsp;stronie w dniu 19.05.2022
-                r.</p>
+                r. </p>
+            <p>Ankieta będzie otwarta do 12.05.2022 r.</p>
             <p>
                 Wypełnienie ankiety zajmie około 5 minut.
             </p>
