changes with button alignment on mobile devices

--- a/templates/main.html
+++ b/templates/main.html
@@ -125,6 +125,7 @@
                 font-size: 40px;
                 padding: 40px;
                 border-radius: 40px;
+                bottom: -4%;
             }
 
             .footer {
