--- a/templates/forms.html
+++ b/templates/forms.html
@@ -1,5 +1,210 @@
-{% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
-{% block content %}
-{% crispy form form.helper %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teleporada | Ankieta</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+        .bg {
+            background-image: url('{% static 'img/backgroundForm.png'%}');
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        .custom-control-input {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+
+            border-radius: 50%;
+            width: 16px;
+            height: 16px;
+
+            border: 2px solid #999;
+            transition: 0.05s all linear;
+            margin-right: 5px;
+
+            position: relative;
+            top: 4px;
+        }
+
+        input:checked {
+            border: 6px solid #536bd3;
+        }
+
+        .textInput {
+            border-radius: 20px;
+            border-color: #ccc;
+            padding: 5px 5px;
+        }
+
+        .content {
+            background: white;
+            width: 60%;
+            color: #4d5258;
+            display: block;
+            margin: 5% auto auto;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-top: 2%;
+            font-family: 'Open Sans', sans-serif;
+            line-height: 2;
+            font-size: 16px;
+            text-align: justify;
+        }
+
+        .buttons{
+            justify-content: center;
+            display: flex;
+            flex-direction: row;
+        }
+
+        .button {
+            position: relative;
+            background-color: #283e9b;
+            border-radius: 20px;
+            border-style: none;
+            box-sizing: border-box;
+            color: #FFFFFF;
+            cursor: pointer;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 16px;
+            height: 40px;
+            width: 100px;
+            line-height: 20px;
+            list-style: none;
+            margin: 20px 10px 10px;
+            outline: none;
+            padding: 10px 16px;
+            text-align: center;
+            text-decoration: none;
+            transition: color 100ms;
+            vertical-align: baseline;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .button:hover,
+        .button:focus {
+            background-color: #324EC4;
+        }
+
+        .buttonBack {
+            position: relative;
+            border-radius: 20px;
+            border-style: none;
+            background-color: #536bd3;
+            box-sizing: border-box;
+            color: white;
+            cursor: pointer;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 16px;
+            height: 40px;
+            width: 100px;
+            line-height: 20px;
+            list-style: none;
+            margin: 20px 10px 10px;
+            outline: none;
+            padding: 10px 16px;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: baseline;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .buttonBack:hover,
+        .buttonBack:focus {
+            background-color: #324EC4;
+            color: white;
+        }
+
+        .invalid-feedback {
+            font-size: smaller;
+            color: #de212c;
+            display: block;
+        }
+
+        .is-invalid {
+            border-color: #cb0c17
+        }
+
+
+        .text-muted {
+            font-size: smaller;
+            display: block;
+        }
+
+        textarea {
+          width: 100%;
+          height: 150px;
+          padding: 12px 20px;
+          box-sizing: border-box;
+          border: 2px solid #ccc;
+          border-radius: 20px;
+          background-color: #f8f8f8;
+          resize: none;
+        }
+        .footer {
+            position: inherit;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            font-family: 'Open Sans', sans-serif;
+            font-size: 12px;
+            color: #324EC4;
+            text-align: center;
+        }
+        @media only screen
+        and (max-device-width: 920px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+            .content {
+                width: 95%;
+            }
+
+            .text {
+                font-size: 40px;
+            }
+
+            h1 {
+                font-size: 70px;
+            }
+
+            .button,
+            .buttonBack{
+                font-size: 16px;
+                padding: 16px;
+                border-radius: 20px;
+            }
+        }
+    </style>
+</head>
+
+<body class="bg">
+<div class="content">
+    {% block content %}
+        {% crispy form form.helper %}
+    {% endblock %}
+</div><div class="footer">
+        <p>Anna Bączyk & Bartosz Czapla</p>
+    </div>
+
+</body>
+</html>
