--- a/templates/main.html
+++ b/templates/main.html
@@ -15,10 +15,10 @@
         .bg {
             background-image: url('{% static 'img/background.jpg'%}');
             height: 100%;
-            margin: 0;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
 
@@ -33,6 +33,8 @@
             width: 50%;
             background: rgb(0, 0, 0);
             background: rgba(255, 255, 255);
+            overflow: auto;
+            min-height: 100vh;
         }
 
         .text {
@@ -48,6 +50,7 @@
             top: 50%;
             -ms-transform: translateY(-50%);
             transform: translateY(-50%);
+            padding-bottom: 2.5rem;
         }
 
         h1 {
@@ -60,7 +63,7 @@
         }
 
         .button {
-            overflow: hidden;
+            overflow: visible;
             position: absolute;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -76,7 +79,7 @@
             height: 40px;
             line-height: 20px;
             list-style: none;
-            margin: 20px;
+            margin-top: 20px;
             outline: none;
             padding: 10px 16px;
             text-align: center;
@@ -103,10 +106,11 @@
             font-size: 12px;
             color: #324EC4;
             text-align: right;
+            height: 3rem;
         }
 
         @media only screen
-        and (max-device-width: 480px)
+        and (max-device-width: 920px)
         and (-webkit-min-device-pixel-ratio: 2)
         and (orientation: portrait) {
             .content {
@@ -115,6 +119,8 @@
 
             .text {
                 font-size: 40px;
+                padding-left: 5%;
+                padding-right: 5%;
             }
 
             h1 {
@@ -125,13 +131,66 @@
                 font-size: 40px;
                 padding: 40px;
                 border-radius: 40px;
-                bottom: -4%;
             }
 
             .footer {
                 font-size: 25px;
             }
         }
+
+        {#iPad#}
+        @media only screen
+        and (min-device-width: 481px)
+        and (max-device-width: 1024px)
+        and (orientation: portrait) {
+
+            .text {
+                padding-top: 30%;
+                padding-left: 5%;
+                padding-right: 5%;
+            }
+
+            .footer {
+                bottom: -30%;
+            }
+        }
+
+        @media only screen
+        and (min-device-width: 481px)
+        and (max-device-width: 1024px)
+        and (orientation: landscape) {
+            .text {
+                top: 28vw;
+                padding-left: 5%;
+                padding-right: 5%;
+            }
+
+            .content {
+                width: 75%;
+            }
+        }
+
+        @media only screen
+        and (max-device-height: 420px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: landscape) {
+            h1 {
+                font-size: 28px;
+            }
+
+            .content {
+                width: 75%;
+            }
+
+            .text {
+                top: 48%;
+                bottom: -40%;
+                padding-left: 5%;
+                padding-right: 5%;
+            }
+        }
+
+
     </style>
     <title>Teleporada | Ankieta</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
@@ -139,12 +198,13 @@
 <div class="bg">
     <div class="content">
         <div class="text">
-            <h1>Wpływ teleporady na&nbsp;jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów oraz&nbsp;lekarzy</h1>
+            <h1>Wpływ teleporady na&nbsp;jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów
+                oraz&nbsp;lekarzy</h1>
             <p>Jesteśmy studentami Politechniki Gdańskiej na kierunku Inżynieria Biomedyczna. W&nbsp;ramach przedmiotów
-                Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz&nbsp;Hurtownie i&nbsp;Eksploracja Danych stworzono poniższą
+                Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz&nbsp;Hurtownie i&nbsp;Eksploracja Danych stworzono
+                poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
-                anonimowa. Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na&nbsp;stronie w dniu 19.05.2022
-                r. </p>
+                anonimowa.</p>
             <p>Ankieta będzie otwarta do 12.05.2022 r.</p>
             <p>
                 Wypełnienie ankiety zajmie około 5 minut.
