--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -42,6 +42,8 @@
             line-height: 1.6;
             font-size: 16px;
             text-align: justify;
+             top: 50%;
+
         }
 
         h1 {
@@ -64,7 +66,7 @@
             color: #324EC4;
             text-align: left;
         }
-
+        {#TODO iPad portrait, phones landscape#}
         @media only screen
         and (max-device-width: 480px)
         and (-webkit-min-device-pixel-ratio: 2)
@@ -84,6 +86,25 @@
                 font-size: 25px;
             }
         }
+        {#iPad#}
+        @media only screen
+        and (min-device-width: 480px)
+        and (max-device-width: 1024px)
+        and (orientation: portrait) {
+            .content{
+                width: 100%
+            }
+            .text {
+               font-size: 40px
+            }
+            h1 {
+                font-size: 70px;
+            }
+            .footer {
+                font-size: 25px;
+            }
+        }
+
     </style>
     <title>Teleporada | Ankieta</title>
 </head>
@@ -91,7 +112,7 @@
     <div class="content">
         <div class="text">
 <h1>Dziękujemy za wypełnienie ankiety!</h1>
-<h2>Przeanalizowane dane wraz z wnioskami zostaną udostępnione na stronie w dniu 19.05.2022 r.</h2>
+<h2>Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na stronie w&nbsp;dniu 19.05.2022 r.</h2>
 </div>
     </div>
     <div class="footer">
