--- a/templates/main.html
+++ b/templates/main.html
@@ -107,113 +107,113 @@
         }
 
 
-        @media only screen
-        and (max-device-height: 420px)
-        and (-webkit-min-device-pixel-ratio: 2)
-        and (orientation: landscape) {
-           h1 {
-                font-size: 3vw;
-            }
-
-            .content {
-                width: 75%;
-            }
-
-            .text {
-                top: 50%;
-                transform: translateY(-50%);
-                padding-left: 5%;
-                padding-right: 5%;
-            }
-            .footer{
-                bottom: 3vw;
-                position: relative;
-                transform: translateY(-50%);
-            }
-        }
-
-        @media only screen
-        and (max-device-width: 920px)
-        and (-webkit-min-device-pixel-ratio: 2)
-        and (orientation: portrait) {
-            .content {
-                width: 100%;
-            }
-
-            .text {
-                font-size: 4vw;
-                padding-left: 5%;
-                padding-right: 5%;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-
-            h1 {
-                font-size: 8vw;
-            }
-
-            .button {
-                font-size: 40px;
-                padding: 40px;
-                border-radius: 40px;
-            }
-
-            .footer {
-                bottom: 3vw;
-                position: relative;
-                transform: translateY(-50%);
-            }
-        }
-
+        {#@media only screen#}
+        {#and (max-device-height: 420px)#}
+        {#and (-webkit-min-device-pixel-ratio: 2)#}
+        {#and (orientation: landscape) {#}
+        {#   h1 {#}
+        {#        font-size: 3vw;#}
+        {#    }#}
+        {##}
+        {#    .content {#}
+        {#        width: 75%;#}
+        {#    }#}
+        {##}
+        {#    .text {#}
+        {#        top: 50%;#}
+        {#        transform: translateY(-50%);#}
+        {#        padding-left: 5%;#}
+        {#        padding-right: 5%;#}
+        {#    }#}
+        {#    .footer{#}
+        {#        bottom: 3vw;#}
+        {#        position: relative;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {#}#}
+        {##}
+        {#@media only screen#}
+        {#and (max-device-width: 920px)#}
+        {#and (-webkit-min-device-pixel-ratio: 2)#}
+        {#and (orientation: portrait) {#}
+        {#    .content {#}
+        {#        width: 100%;#}
+        {#    }#}
+        {##}
+        {#    .text {#}
+        {#        font-size: 4vw;#}
+        {#        padding-left: 5%;#}
+        {#        padding-right: 5%;#}
+        {#        top: 50%;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {##}
+        {#    h1 {#}
+        {#        font-size: 8vw;#}
+        {#    }#}
+        {##}
+        {#    .button {#}
+        {#        font-size: 40px;#}
+        {#        padding: 40px;#}
+        {#        border-radius: 40px;#}
+        {#    }#}
+        {##}
+        {#    .footer {#}
+        {#        bottom: 3vw;#}
+        {#        position: relative;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {#}#}
+        {##}
         {#iPad#}
-        @media only screen
-        and (min-device-width: 481px)
-        and (max-device-width: 1024px)
-        and (orientation: portrait) {
-            h1 {
-                font-size: 6vw;
-            }
-
-            .text {
-                font-size: 3vw;
-                top: 50%;
-                transform: translateY(-50%);
-                padding-left: 5%;
-                padding-right: 5%;
-            }
-
-            .footer {
-                bottom: 3vw;
-                position: relative;
-                transform: translateY(-50%);
-            }
-        }
-
-        @media only screen
-        and (min-device-width: 481px)
-        and (max-device-width: 1024px)
-        and (orientation: landscape) {
-            h1 {
-                font-size: 3vw;
-            }
-
-            .text {
-                padding-left: 5%;
-                padding-right: 5%;
-                top: 55%;
-                transform: translateY(-50%);
-            }
-
-            .content {
-                width: 75%;
-            }
-
-            .footer {
-                bottom: 3vw;
-                position: relative;
-                transform: translateY(-50%);
-            }
-        }
+        {#@media only screen#}
+        {#and (min-device-width: 481px)#}
+        {#and (max-device-width: 1024px)#}
+        {#and (orientation: portrait) {#}
+        {#    h1 {#}
+        {#        font-size: 6vw;#}
+        {#    }#}
+        {##}
+        {#    .text {#}
+        {#        font-size: 3vw;#}
+        {#        top: 50%;#}
+        {#        transform: translateY(-50%);#}
+        {#        padding-left: 5%;#}
+        {#        padding-right: 5%;#}
+        {#    }#}
+        {##}
+        {#    .footer {#}
+        {#        bottom: 3vw;#}
+        {#        position: relative;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {#}#}
+        {##}
+        {#@media only screen#}
+        {#and (min-device-width: 481px)#}
+        {#and (max-device-width: 1024px)#}
+        {#and (orientation: landscape) {#}
+        {#    h1 {#}
+        {#        font-size: 3vw;#}
+        {#    }#}
+        {##}
+        {#    .text {#}
+        {#        padding-left: 5%;#}
+        {#        padding-right: 5%;#}
+        {#        top: 55%;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {##}
+        {#    .content {#}
+        {#        width: 75%;#}
+        {#    }#}
+        {##}
+        {#    .footer {#}
+        {#        bottom: 3vw;#}
+        {#        position: relative;#}
+        {#        transform: translateY(-50%);#}
+        {#    }#}
+        {#}#}
 
 
     </style>
