--- a/templates/forms.html
+++ b/templates/forms.html
@@ -50,6 +50,7 @@
             border-radius: 20px;
             border-color: #ccc;
             padding: 5px 5px;
+            border-style: solid;
         }
 
         .content {
