--- a/templates/main.html
+++ b/templates/main.html
@@ -32,23 +32,17 @@
             width: 50%;
             background: rgb(0, 0, 0);
             background: rgba(255, 255, 255);
-            min-height: 100vh;
             overflow: auto;
+            padding: 5%;
+
         }
 
         .text {
             color: #4d5258;
-            padding-left: 9%;
-            padding-right: 9%;
             font-family: 'Open Sans', sans-serif;
             line-height: 1.6;
             font-size: 16px;
             text-align: justify;
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            padding-bottom: 2.5rem;
         }
 
         h1 {
@@ -200,10 +194,11 @@
             <p>
                 Wypełnienie ankiety zajmie około 5 minut.
             </p>
+        <br/>
+        </div>
             <form action="/general">
                 <input type="submit" class="button" value="Przejdź do ankiety"/>
             </form>
-        </div>
     </div>
 </div>
 </html>
