--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -18,6 +18,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         * {
@@ -42,8 +43,7 @@
             line-height: 1.6;
             font-size: 16px;
             text-align: justify;
-             top: 50%;
-
+            top: 50%;
         }
 
         h1 {
