--- a/templates/main.html
+++ b/templates/main.html
@@ -92,7 +92,7 @@
         and (max-device-height: 420px)
         and (-webkit-min-device-pixel-ratio: 2)
         and (orientation: landscape) {
-           h1 {
+            h1 {
                 font-size: 3vw;
             }
 
@@ -101,14 +101,10 @@
             }
 
             .text {
-                top: 50%;
-                transform: translateY(-50%);
                 padding-left: 5%;
                 padding-right: 5%;
             }
-            .button{
-                bottom: 0;
-            }
+
         }
 
         @media only screen
@@ -120,11 +116,9 @@
             }
 
             .text {
-                font-size: 4vw;
+                font-size: 3vw;
                 padding-left: 5%;
                 padding-right: 5%;
-                top: 60%;
-                transform: translateY(-50%);
             }
 
             h1 {
@@ -133,10 +127,13 @@
 
             .button {
                 font-size: 40px;
-                padding: 40px;
-                border-radius: 40px;
-                bottom: 0;
+                padding: 20px;
+                height: 5%;
+                width: 45%;
+                border-radius: 50px;
+                margin: auto;
             }
+
         }
 
         @media only screen
@@ -149,10 +146,17 @@
 
             .text {
                 font-size: 3vw;
-                top: 50%;
-                transform: translateY(-50%);
                 padding-left: 5%;
                 padding-right: 5%;
+            }
+
+             .button {
+                font-size: 40px;
+                padding: 20px;
+                height: 5%;
+                width: 45%;
+                border-radius: 50px;
+                margin: auto;
             }
         }
 
@@ -167,13 +171,12 @@
             .text {
                 padding-left: 5%;
                 padding-right: 5%;
-                top: 55%;
-                transform: translateY(-50%);
             }
 
             .content {
                 width: 75%;
             }
+
         }
     </style>
     <meta charset="UTF-8">
@@ -194,11 +197,11 @@
             <p>
                 Wypełnienie ankiety zajmie około 5 minut.
             </p>
-        <br/>
+            <br/>
         </div>
-            <form action="/general">
-                <input type="submit" class="button" value="Przejdź do ankiety"/>
-            </form>
+        <form action="/general">
+            <input type="submit" class="button" value="Przejdź do ankiety"/>
+        </form>
     </div>
 </div>
 </html>
