Set left text align for mobile

--- a/templates/main.html
+++ b/templates/main.html
@@ -103,6 +103,7 @@
             .text {
                 padding-left: 5%;
                 padding-right: 5%;
+                text-align: left;
             }
 
         }
@@ -119,6 +120,7 @@
                 font-size: 3vw;
                 padding-left: 5%;
                 padding-right: 5%;
+                text-align: left;
             }
 
             h1 {
@@ -148,6 +150,7 @@
                 font-size: 3vw;
                 padding-left: 5%;
                 padding-right: 5%;
+                text-align: left;
             }
 
              .button {
@@ -171,6 +174,7 @@
             .text {
                 padding-left: 5%;
                 padding-right: 5%;
+                text-align: left;
             }
 
             .content {
@@ -193,7 +197,7 @@
                 poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
                 anonimowa.</p>
-            <p>Ankieta będzie otwarta do 12.05.2022 r.</p>
+            <p>Ankieta będzie otwarta do 12.05.2022&nbsp;r.</p>
             <p>
                 Wypełnienie ankiety zajmie około 5 minut.
             </p>
