--- a/templates/main.html
+++ b/templates/main.html
@@ -79,7 +79,7 @@
             vertical-align: baseline;
             user-select: none;
             -webkit-user-select: none;
-            touch-action: manipulation;
+            {#touch-action: manipulation;#}
         }
 
         .button:hover,
