--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -10,10 +10,21 @@
 <body class="bg">
 <div class="content">
     <h1>Dane statystyczne</h1>
-<div class="buttons">
-        <button class="button" onclick="history.back()">Wstecz</button>
+    <p>Ankieta została zamknięta 12.05.2022 r. i zebrano 116 wypełnionych ankiet dla pacjentów.
+        Po oczyszczaniu danych i usunięciu krotek z&nbsp;brakującymi danymi (wynikających z wprowadzenia dodatkowych
+        pytań po zebraniu kilku wyników) do dalszego przetwarzania wykorzystano 111 wyników.</p>
+<p>Poniżej przedstawiono wykresy obrazujące część otrzymanych wyników: </p>
+    {% block content %}
+        {% autoescape off %}
+            {% for i in plot_div %}
+                {{ i }}
+            {% endfor %}
+        {% endautoescape %}
+    {% endblock content %}
+    <div class="buttons">
+        <button class="button" onclick="location.href='../'">Wstecz</button>
     </div>
-    </div>
+</div>
 <div class="footer">
     <p>Anna Bączyk IBM IwM 1 180489</p>
 </div>
